# nuwa

./: .env.example  .gitignore  .pre-commit-config.yaml  API.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TROUBLESHOOTING.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sdk_quickstart.py
examples/customer_service_demo/: README.md  agent.py  train.py
examples/deepseek_demo/: train_with_deepseek.py
examples/train_chatbot/: nuwa_config.yaml  target_agent.py
examples/train_code_reviewer/: nuwa_config.yaml
src/nuwa/: __init__.py  __main__.py  cli.py
src/nuwa/benchmarks/: __init__.py  models.py  registry.py  runner.py
src/nuwa/config/: schema.py  store.py
src/nuwa/connectors/: cli_adapter.py  function_call.py  http_api.py  registry.py
src/nuwa/conversation/: __init__.py  manager.py  renderer.py
src/nuwa/conversation/phases/: approval.py  direction.py  onboarding.py  running.py
src/nuwa/core/: defaults.py  exceptions.py  protocols.py  types.py
src/nuwa/engine/: __init__.py  loop.py  scheduler.py
src/nuwa/engine/distributed/: __init__.py  coordinator.py
src/nuwa/engine/objectives/: __init__.py  pareto.py  scorer.py  types.py
src/nuwa/guardrails/: base.py  consistency.py  overfitting.py  regression.py
src/nuwa/llm/: backend.py  prompts.py  response_parser.py
src/nuwa/persistence/: __init__.py  artifact_store.py  git_tracker.py  run_log.py
src/nuwa/plugins/: __init__.py  context.py  loader.py
src/nuwa/sandbox/: __init__.py  agent.py  diff.py  manager.py
src/nuwa/sdk/: __init__.py  decorator.py  quick.py  trainer.py
src/nuwa/web/: server.py
tests/integration/: test_e2e_training.py  test_full_loop.py  test_sdk_sandbox.py  test_web_server.py
tests/unit/: test_artifact_store.py  test_benchmarks_runner.py  test_config_schema.py  test_connectors.py  test_connectors_function.py  test_core_exceptions.py  test_core_types.py  test_distributed_coordinator.py  test_engine_scheduler.py  test_guardrails_base.py  test_guardrails_concrete.py  test_llm_backend.py  test_plugins_loader.py  test_response_parser.py  test_running_phase.py  test_sandbox_manager_session_ops.py  test_training_loop_resume.py
(+13 files in other folders)
