[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nuwa-trainer"
version = "0.3.1"
description = "女娲 Nuwa - AI Agent Trainer: optimize your agents through automated training loops"
readme = "README.md"
license = { text = "BSL-1.1" }
requires-python = ">=3.11"
keywords = ["ai", "agent", "training", "prompt-optimization", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "litellm>=1.40",
    "pydantic>=2.0",
    "aiohttp>=3.9",
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "sse-starlette>=2.0",
    "ruff",
    "mypy",
    "types-PyYAML",
]
web = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "sse-starlette>=2.0",
]

[project.scripts]
nuwa = "nuwa.cli:app"

[project.urls]
Homepage = "https://github.com/KBREX684/nuwa"
Repository = "https://github.com/KBREX684/nuwa"
Issues = "https://github.com/KBREX684/nuwa/issues"
Changelog = "https://github.com/KBREX684/nuwa/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/nuwa"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # import sorting
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["nuwa"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
